--- a/src/shared/css/rstyles.css
+++ b/src/shared/css/rstyles.css
@@ -12,14 +12,28 @@
     
 }
 #searchinline{
-    display: inline-block;
     justify-items: center;
-    width: 400px;
+    max-width: 380px;
+    width: 100%;
     height: 60px;
+    margin: auto;
     margin-top: 20px;
-    margin-left: 160px;
     border-radius: 40px;
-    background-color:lightgray;
+    background-color: lightgray;
+}
+@media screen and (max-width: 400px) { 
+    #ibox{
+        width: 176px !important; 
+     }
+     #dptoggle,#dptoggle2{
+         width: 125px !important;
+         font-size: 12px !important;
+     }
+ 
+ }
+ #customMap > div {
+    width: 100% !important;
+    max-width: auto !important;
 }
 #btnline{
     background: transparent;
@@ -29,7 +43,6 @@
 }
 #rowgap{
     /* margin-top: 20px; */
-    margin-left: 100px;
     display: flex;  
 }
 #rowgap2{
@@ -53,7 +66,6 @@
 }
 #dptoggle2{
     border-radius: 30px;
-    margin-left: 100px;
     /* margin-top: 15px; */
     width: 235px;
     height: 60px;
