--- a/src/shared/css/nishkarshforms.css
+++ b/src/shared/css/nishkarshforms.css
@@ -686,6 +686,7 @@
     /* background-repeat: no-repeat; */
 }
 .footerBg {
+    margin-top: 10px;
     background-color: #466f3f;
     padding-bottom: 20px;
     border-bottom: 7px solid #e1bf00;
